--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,5 @@
+name: Build
+
 on:
   workflow_call:
   pull_request:
@@ -5,8 +7,23 @@ on:
 
 jobs:
   print-trigger:
+    strategy:
+      fail-fast: true
+      matrix:
+        machine:
+          - rb3g2
+          - imx8mm
     runs-on: ubuntu-latest
     steps:
       - name: Print trigger
         run: |
           echo "Triggered by ${{github.event_name}}"
+      - name: Clone repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: testjobs-${{ GITHUB_RUN_ID }}-${{ matrix.machine }}
+          path: lava/${{ matrix.machine }}/
