--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
         machine:
           - rb3g2
           - imx8mm
-    oputputs:
+    outputs:
       jobmatrix: ${{ steps.listjobs.outputs.jobmatrix }}
     steps:
       - name: Print trigger
@@ -29,7 +29,7 @@ jobs:
           name: testjobs-${{ github.event.workflow_run.id }}-${{ matrix.machine }}
           path: lava/${{ matrix.machine }}/
       - name: "List jobs"
-        is: listjobs
+        id: listjobs
         run: |
           JOBFILES=$(ls -mQ "lava/${{ matrix.machine }}/")
           JOBFILES="[${JOBFILES}]"
