Add timeout to the step
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,6 +41,7 @@ jobs:
     steps:
       - name: 'Download Artifacts ${{ matrix.target }}'
         uses: actions/download-artifact@v4
+        timeout-minutes: 20
         with:
           name: testjobs
           path: lava/
