Test different dispatch strategies
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,9 +1,12 @@
 name: Schedule build
 
 on:
+  workflow_dispatch:
   schedule:
   - cron: "*/5 * * * *"
 
 jobs:
   nightly:
     uses: ./.github/workflows/build.yml
+  test:
+    uses: ./.github/workflows/test.yaml
