--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,8 +2,8 @@ name: Schedule build
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: "*/5 * * * *"
+#  schedule:
+#  - cron: "*/5 * * * *"
 
 jobs:
   nightly:
