--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,6 +21,7 @@ jobs:
         run: |
           echo "Triggered by ${{ github.event_name }}"
           echo "Triggering workflow: ${{ github.event.workflow_run.id }}"
+          echo "Triggering event: ${{ github.event.id }}"
       - name: "List jobs"
         id: listjobs
         run: |
