--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -7,9 +7,9 @@ on:
 
 jobs:
   nightly:
-    uses: ./.github/workflows/build.yml
+    uses: ./.github/workflows/build.yml@HEAD
   test:
     needs: nightly
-    uses: ./.github/workflows/test.yaml
+    uses: ./.github/workflows/test.yaml@HEAD
     with:
-      url: ${{ needs.nightly.outputs.url }}
+      url: ${{ needs.nightly.outputs.artifact_url }}
