--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
           echo "jobmatrix=$J" >> $GITHUB_OUTPUT
           echo "Preparing testjob files"
       - name: 'Upload test jobs'
-        uses: actions/download-artifact@v4
+        uses: actions/upload-artifact@v4
         timeout-minutes: 20
         with:
           name: testjobs
