Inherit repository secrets in reusable workflows
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -9,5 +9,6 @@ on:
 jobs:
   test:
     uses: ./.github/workflows/test.yaml
+    secrets: inherit
     with:
       url: ${{ github.event.workflow_run.outputs.artifacts_url }}
