--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -10,6 +10,7 @@ jobs:
     uses: ./.github/workflows/build.yml
   test:
     needs: nightly
+    secrets: inherit
     uses: ./.github/workflows/test.yaml
     with:
       url: ${{ needs.nightly.outputs.artifact_url }}
