--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -9,6 +9,7 @@ jobs:
     uses: ./.github/workflows/build.yml
   test:
     needs: nightly
+    secrets: inherit
     uses: ./.github/workflows/test.yaml
     with:
       url: ${{ needs.nightly.outputs.artifact_url }}
