--- a/lava/rb3g2/hackbench.yaml
+++ b/lava/rb3g2/hackbench.yaml
@@ -55,9 +55,9 @@ context:
   lava_test_results_dir: /home/lava-%s
   test_character_delay: 10
 device_type: qcs6490-rb3gen2-core-kit
-job_name: hacbench test (qcs6490-rb3gen2-core-kit) 12591501185
+job_name: hackbench test (qcs6490-rb3gen2-core-kit) 12591501185
 metadata:
-  build-commit: '9fd1724b39423fde04c39a7c129ec2ba88ca5da9'
+  downloads-url: "{{ DOWNLOADS_URL }}"
 priority: 50
 tags:
 - cambridge-lab
