Update job templates with machine name
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/lava/imx8mm/boot.yaml
+++ b/lava/imx8mm/boot.yaml
@@ -96,10 +96,10 @@ actions:
 - test:
     definitions:
     - from: git
-      name: disable-aklite-reboot
+      name: "{{ MACHINE }}-disable-aklite-reboot"
       path: automated/linux/disable-aklite-reboot/disable-aklite-reboot.yaml
       repository: https://github.com/linaro/test-definitions.git
     - from: git
-      name: fs-resize
+      name: "{{ MACHINE }}-fs-resize"
       path: automated/linux/fs-resize/fs-resize.yaml
       repository: https://github.com/linaro/test-definitions.git
