--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,6 +46,12 @@ jobs:
         with:
           name: testjobs
           path: lava/
+      - name: "Update test names"
+        run: |
+          PATH=$(echo "${{ matrix.target }}" | awk -F/ '{print $2"/"$3}')
+          MACHINE=$(echo "${{ matrix.target }}" | awk -F/ '{print $2}')
+          FIND_PATH=$()
+          find "${FIND_PATH}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
 
       - name: Submit ${{ matrix.target }}
         timeout-minutes: 20
