--- a/lava/rb3g2/boot.yaml
+++ b/lava/rb3g2/boot.yaml
@@ -43,7 +43,7 @@ actions:
 - test:
     definitions:
     - from: git
-      name: smoke-test
+      name: "{{ MACHINE }}-smoke-test"
       path: automated/linux/smoke/smoke.yaml
       repository: https://github.com/linaro/test-definitions.git
       parameters:
