--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,10 +49,9 @@ jobs:
       - name: "Update test names"
         run: |
           TARGET=${{ matrix.target }}
-          PATH=${TARGET#/*}
+          FIND_PATH=${TARGET#/*}
           MACHINE=${PATH#/*}
-          FIND_PATH=$()
-          find "${PATH}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
+          find "${FIND_PATH}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
 
       - name: Submit ${{ matrix.target }}
         timeout-minutes: 20
