--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,6 +52,7 @@ jobs:
           FIND_PATH=${TARGET#/*}
           MACHINE=${PATH#/*}
           find "${FIND_PATH}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
+          cat "${{ matrix.target }}"
 
       - name: Submit ${{ matrix.target }}
         timeout-minutes: 20
