--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,8 +49,11 @@ jobs:
       - name: "Update test names"
         run: |
           TARGET=${{ matrix.target }}
+          echo "$TARGET"
           FIND_PATH=${TARGET#/*}
+          echo "$FIND_PATH"
           MACHINE=${PATH#/*}
+          echo "$MACHINE"
           find "${FIND_PATH}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
           cat "${{ matrix.target }}"
 
