Fix variable name
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,11 +48,12 @@ jobs:
           path: lava/
       - name: "Update test names"
         run: |
+          env
           TARGET=${{ matrix.target }}
           echo "$TARGET"
           FIND_PATH=${TARGET#/*}
           echo "$FIND_PATH"
-          MACHINE=${PATH#/*}
+          MACHINE=${FIND_PATH#/*}
           echo "$MACHINE"
           find "${FIND_PATH}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
           cat "${{ matrix.target }}"
