--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,12 +48,11 @@ jobs:
           path: lava/
       - name: "Update test names"
         run: |
-          env
           TARGET=${{ matrix.target }}
           echo "$TARGET"
-          FIND_PATH="${TARGET#/*}"
+          FIND_PATH="${TARGET#*/}"
           echo "$FIND_PATH"
-          MACHINE="${FIND_PATH#/*}"
+          MACHINE="${FIND_PATH#*/}"
           echo "$MACHINE"
           find "${FIND_PATH}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
           cat "${{ matrix.target }}"
