Fix image name for imx8mm
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/lava/imx8mm/docker.yaml
+++ b/lava/imx8mm/docker.yaml
@@ -43,7 +43,7 @@ actions:
       bootloader:
         url: downloads://imx-boot-imx8mmevk
       image:
-        url: downloads://lmp-factory-image-imx8mmevk.rootfs.wic.gz
+        url: downloads://lmp-factory-image-imx8mmevk.wic.gz
       mfgtools:
         url: downloads://mfgtool-files.tgz
       settings:
