Update to new lava-action syntax
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -61,6 +61,6 @@ jobs:
           lava_token: ${{ secrets.LAVA_TOKEN }}
           lava_url: 'lava.infra.foundries.io'
           job_definition: ${{ matrix.target }}
-          wait_for_job: 'true'
-          fail_action_on_failure: 'true'
-          save_result_as_artifact: 'true'
+          wait_for_job: true
+          fail_action_on_failure: true
+          save_result_as_artifact: true
