--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -64,3 +64,8 @@ jobs:
           wait_for_job: true
           fail_action_on_failure: true
           save_result_as_artifact: true
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: |
+            test-results-*.xml
