--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -64,8 +64,23 @@ jobs:
           wait_for_job: true
           fail_action_on_failure: true
           save_result_as_artifact: true
+
+  publish-test-results:
+    name: "Publish Tests Results"
+    needs: submit-job
+    runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      pull-requests: write
+
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+          pattern: test-results-*.xml
+
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: |
-            test-results-*.xml
+          files: "artifacts/**/*.xml"
