--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -4,6 +4,12 @@ on:
   push:
   pull_request:
 
+permissions:
+  checks: write
+  pull-requests: write
+  contents: read
+  packages: read
+
 jobs:
   nightly:
     uses: ./.github/workflows/build.yml
