--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -88,4 +88,4 @@ jobs:
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: "artifacts/**/*.xml"
+          files: "$GITHUB_WORKSPACE/artifacts/**/*.xml"
