Update permissions on workflow_run
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -6,6 +6,12 @@ on:
     types:
       - completed
 
+permissions:
+  checks: write
+  pull-requests: write
+  contents: read
+  packages: read
+
 jobs:
   test:
     uses: ./.github/workflows/test.yaml
