--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -10,5 +10,14 @@ permissions:
   packages: read
 
 jobs:
+  event_file:
+  name: "Event File"
+  runs-on: ubuntu-latest
+  steps:
+  - name: Upload
+    uses: actions/upload-artifact@v4
+    with:
+      name: Event File
+      path: ${{ github.event_path }}
   nightly:
     uses: ./.github/workflows/build.yml
