Fix wrun yaml syntax
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -28,9 +28,9 @@ jobs:
         with:
           path: artifacts
 
-       - name: Download event file
-         uses: dawidd6/action-download-artifact@e7466d1a7587ed14867642c2ca74b5bcc1e19a2d
-         with:
+      - name: Download event file
+        uses: actions/download-artifact@v4
+        with:
             run_id: ${{ github.event.workflow_run.id }}
             path: artifacts
 
