Fix wrun workflow
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -20,7 +20,7 @@ jobs:
       url: ${{ github.event.workflow_run.outputs.artifacts_url }}
   publish-test-results:
     name: "Publish Tests Results"
-    needs: submit-job
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Download Artifacts
