Fix run-id in workflow_run
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Download event file
         uses: actions/download-artifact@v4
         with:
-            run_id: ${{ github.event.workflow_run.id }}
+            run-id: ${{ github.event.workflow_run.id }}
             path: artifacts
 
       - name: "List files"
