Download proper event file
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -33,6 +33,7 @@ jobs:
         with:
             run-id: ${{ github.event.workflow_run.id }}
             path: artifacts
+            repository: ${{ github.event.workflow_run.repository }}
 
       - name: "List files"
         run: |
