--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -33,7 +33,7 @@ jobs:
         with:
             run-id: ${{ github.event.workflow_run.id }}
             path: artifacts
-            repository: ${{ github.event.workflow_run.repository }}
+            repository: ${{ github.event.workflow_run.repository.full_name }}
 
       - name: "List files"
         run: |
