--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -13,11 +13,51 @@ permissions:
   packages: read
 
 jobs:
+  retrieve-build-url:
+    runs-on: ubuntu-latest
+    outputs:
+      url: ${{ steps.set-build-url.outputs.url }}
+    steps:
+      - name: 'Download build URL'
+        uses: actions/github-script@v6
+        with:
+          script: |
+            let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               run_id: context.payload.workflow_run.id,
+            });
+            let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
+              return artifact.name == "build_url"
+            })[0];
+            let download = await github.rest.actions.downloadArtifact({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               artifact_id: matchArtifact.id,
+               archive_format: 'zip',
+            });
+            const fs = require('fs');
+            const path = require('path');
+            const temp = '${{ runner.temp }}/artifacts';
+            if (!fs.existsSync(temp)){
+              fs.mkdirSync(temp);
+            }
+            fs.writeFileSync(path.join(temp, 'build_url.zip'), Buffer.from(download.data));
+
+      - name: 'Setup build URL'
+        id: set-build-url
+        run: |
+          unzip build_url.zip -d "${{ runner.temp }}/artifacts"
+          BUILD_URL=$(cat "${{ runner.temp }}/artifacts/build_url")
+          echo "Build URL: ${BUILD_URL}"
+          echo "url=${BUILD_URL}" >> $GITHUB_OUTPUT
+
   test:
+    needs: retrieve-build-url
     uses: ./.github/workflows/test.yaml
     secrets: inherit
     with:
-      url: ${{ github.event.workflow_run.outputs.artifacts_url }}
+      url: ${{ needs.retrieve-build-url.outputs.url }}
   publish-test-results:
     name: "Publish Tests Results"
     needs: test
