--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -50,7 +50,9 @@ jobs:
           ls -l
           ls -l "${{ runner.temp }}/artifacts/"
           unzip "${{ runner.temp }}/artifacts/build_url.zip"
-          BUILD_URL=$(cat "${{ runner.temp }}/artifacts/build_url")
+          ls -l
+          ls -l "${{ runner.temp }}/artifacts/"
+          BUILD_URL=$(cat build_url)
           echo "Build URL: ${BUILD_URL}"
           echo "url=${BUILD_URL}" >> $GITHUB_OUTPUT
 
