--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -6,7 +6,7 @@ on:
     types:
       - completed
 
-run-name: Tests triggered by ${{ github.event.workflow_run.id }}
+run-name: Tests triggered by ${{ github.event.workflow_run.pull_requests[0].title }}
 
 permissions:
   checks: write
