--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -6,7 +6,7 @@ on:
     types:
       - completed
 
-run-name: Tests triggered by ${{ github.event.workflow_run.pull_requests[0].title }}
+run-name: Tests triggered by PR: ${{ github.event.workflow_run.display_title }}
 
 permissions:
   checks: write
@@ -57,7 +57,7 @@ jobs:
           BUILD_URL=$(cat build_url)
           echo "Build URL: ${BUILD_URL}"
           echo "url=${BUILD_URL}" >> $GITHUB_OUTPUT
-          echo "${{ toJSON(github.event.workflow_run) }}"
+          #echo "${{ toJSON(github.event.workflow_run) }}"
 
   test:
     needs: retrieve-build-url
