--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
         description: "URL to retrieve build artifacts"
         value: ${{ jobs.save-build-url.outputs.url }}
 
+env:
+  BASE_ARTIFACT_URL: "https://example.com/uploads/${GITHUB_RUN_ID}"
+
 jobs:
   print-trigger:
     strategy:
@@ -32,8 +35,8 @@ jobs:
       - name: Save URL
         id: save-url
         run: |
-          echo "url=https://example.com/uploads/${GITHUB_RUN_ID}/" >> $GITHUB_OUTPUT
-          echo "https://example.com/uploads/${GITHUB_RUN_ID}" > build_url
+          echo "url=${BASE_ARTIFACT_URL}" >> $GITHUB_OUTPUT
+          echo "${BASE_ARTIFACT_URL}" > build_url
       - name: Upload build URL
         uses: actions/upload-artifact@v4
         with:
