Add LAVA templates schema check
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -12,6 +12,8 @@ permissions:
 jobs:
   nightly:
     uses: ./.github/workflows/build.yml
+  schema-check:
+    uses: ./.github/workflows/lava-sanity.yml
   test:
     needs: nightly
     secrets: inherit
