Fix typo in lava-sanity
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/lava-sanity.yml
+++ b/.github/workflows/lava-sanity.yml
@@ -21,7 +21,7 @@ jobs:
           tee -a schemacheck.py <<EOF
           import sys
           import yaml
-          from lava_common.schema import *
+          from lava_common.schemas import *
           try:
             f = open(sys.argv[1], "rb")
             y = yaml.safe_load(f)
