Add schema check to PR workflow
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@foundries.io>

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -19,5 +19,7 @@ jobs:
       with:
         name: Event File
         path: ${{ github.event_path }}
+  schema-check:
+    uses: ./.github/workflows/lava-sanity.yml
   nightly:
     uses: ./.github/workflows/build.yml
