--- a/lava/rb3g2/boot.yaml
+++ b/lava/rb3g2/boot.yaml
@@ -48,7 +48,7 @@ actions:
       repository: https://github.com/linaro/test-definitions.git
       parameters:
         SKIP_INSTALL: "True"
-        TESTS: "pwd, uname -a, ip a"
+        TESTS: "pwd, uname -a, ip a, lsusb"
 context:
   lava_test_results_dir: /home/lava-%s
   test_character_delay: 10
