Save lava job details as artifact
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Submit ${{ matrix.target }}
         timeout-minutes: 20
-        uses: foundriesio/lava-action@save-results
+        uses: foundriesio/lava-action@save-job-details
         with:
           lava_token: ${{ secrets.LAVA_TOKEN }}
           lava_url: 'lava.infra.foundries.io'
@@ -65,6 +65,7 @@ jobs:
           wait_for_job: true
           fail_action_on_failure: false
           save_result_as_artifact: true
+          save_job_details: true
 
   publish-test-results:
     name: "Publish Tests Results"
