--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -90,3 +90,15 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
           files: "${{ github.workspace }}/artifacts/**/*.xml"
+
+      - name: Publish Test Job Details
+        run: |
+          which jq
+          for json_file in "${{ github.workspace }}/artifacts/**/test-job-*.json"
+          do
+              DEVICE_TYPE=$(js ".requested_device_type" < $json_file)
+              URL=$(js ".url" < $json_file)
+              JOB_ID=$(js ".id" < $json_file)
+              echo " * [Job $JOB_ID on $DEVICE_TYPE]($URL)" >> $GITHUB_STEP_SUMMARY
+          done
+
