Fix generated markdown
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -95,9 +95,9 @@ jobs:
         run: |
           for json_file in $(find ${{ github.workspace }} -name "test-job-*.json")
           do
-              DEVICE_TYPE=$(cat "$json_file" | jq ".requested_device_type")
-              URL=$(cat "$json_file" | jq ".url")
-              JOB_ID=$(cat "$json_file" | jq ".id")
+              DEVICE_TYPE=$(cat "$json_file" | jq -r ".requested_device_type")
+              URL=$(cat "$json_file" | jq -r ".url")
+              JOB_ID=$(cat "$json_file" | jq -r ".id")
               echo " * [Job $JOB_ID on $DEVICE_TYPE]($URL)"
               echo " * [Job $JOB_ID on $DEVICE_TYPE]($URL)" >> $GITHUB_STEP_SUMMARY
           done
