--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,6 +53,8 @@ jobs:
           FIND_PATH="${TARGET#*/}"
           MACHINE="${FIND_PATH%/*}"
           find "${{ matrix.target }}" -name "*.yaml" -exec sed -i "s|{{ MACHINE }}|${MACHINE}|g" '{}' \;
+          find "${{ matrix.target }}" -name "*.yaml" -exec sed -i "s|{{ AP_NAME }}|${{secrets.AP_NAME}}|g" '{}' \;
+          find "${{ matrix.target }}" -name "*.yaml" -exec sed -i "s|{{ AP_PASSWORD }}|${{secrets.AP_PASSWORD}}|g" '{}' \;
           cat "${{ matrix.target }}"
 
       - name: Submit ${{ matrix.target }}
