--- a/lava/rb3g2/boot.yaml
+++ b/lava/rb3g2/boot.yaml
@@ -49,6 +49,8 @@ actions:
       parameters:
         SKIP_INSTALL: "True"
         TESTS: "pwd, uname -a, ip a, lsusb"
+        AP_NAME: "{{ AP_NAME }}"
+        AP_PASSWORD: "{{ AP_PASSWORD }}"
 context:
   lava_test_results_dir: /home/lava-%s
   test_character_delay: 10
