--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -24,7 +24,7 @@ jobs:
         id: download-artifact
         uses: actions/download-artifact@v4
         with:
-          run_id: ${{github.event.workflow_run.id}}
+          run-id: ${{github.event.workflow_run.id}}
           name: build_url
       - name: 'Setup build URL'
         id: set-build-url
