Add GITHUB_TOKEN to download action
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/wrun.yaml
+++ b/.github/workflows/wrun.yaml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           run-id: ${{github.event.workflow_run.id}}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           name: build_url
       - name: 'Setup build URL'
         id: set-build-url
